# Muxia

./: .gitignore  AGENTS.md  CLAUDE.md  DEVELOPMENT.md  Package.swift  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json
.agent/: IMPLEMENT.md  PLANS.md  code_review.md
Muxia.xcodeproj/: project.pbxproj
Muxia.xcodeproj/xcshareddata/xcschemes/: Muxia.xcscheme
MuxiaHostApp/: Info.plist  MuxiaHostApp.swift
MuxiaHostApp/Assets.xcassets/AccentColor.colorset/: Contents.json
Sources/MuxiaCore/Domain/: Models.swift
Sources/MuxiaCore/FileTracking/: ProjectFileTracker.swift
Sources/MuxiaCore/Persistence/: PersistenceController.swift
Sources/MuxiaCore/Runtime/: AppServerRuntime.swift  PrototypeRuntime.swift
Sources/MuxiaCore/State/: WorkbenchStore.swift
Sources/MuxiaCore/Views/: WorkbenchViews.swift
Tests/MuxiaCoreTests/: WorkbenchStoreTests.swift
docs/: architecture.md  spec.md
docs/decisions/: 0001-initial-architecture.md  0002-event-contract-normalization.md
docs/superpowers/plans/: 2026-04-11-titlebar-ui-redesign.md
docs/tasks/: alpha-observability-workbench.md  cmux-redesign.md
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  event_bus.rs  graph.rs  lib.rs  main.rs  models.rs  pty.rs  watcher.rs
src-tauri/src/adapters/: claude.rs  codex.rs  mod.rs
src/components/cards/: AdvancedDiffCard.tsx  (+9 more)
src/lib/: runtimeDiagnostics.ts  tauri.ts
src/state/: layoutCards.ts  store.ts  workspace.ts
src/types/: events.ts
(+16 files in other folders)
