[package]
name = "new-terminal"
version = "0.1.0"
description = "Agent workflow terminal"
authors = ["new-terminal"]
edition = "2021"

[lib]
name = "new_terminal_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
notify = "6"
portable-pty = "0.8"
regex = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
uuid = { version = "1", features = ["v4", "serde"] }
